2001-04-12  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSProcessInfo.m ([load]): Fixed single line change somehow
	missed from last patch.

2001-04-12  Adam Fedor  <fedor@gnu.org>

	* Headers/gnustep/base/NSLock.h: Include thrmach.h if NeXT_RUNTIME.
	* Headers/gnustep/base/NSThread.h: Likewise.
	* Headers/gnustep/base/NSObjCRuntime: Include objc-gnu2next.h if
	NeXT_RUNTIME, use common objc functions for compatibility.
	* Headers/gnustep/base/objc-gnu2next.h: Update, simplify.
	* Headers/gnustep/base/thr-mach.h: New file
	* Source/thr-mach.m: New file
	* Source/GNUmakefile: Update to conditionally compile NeXT files

	* Documentation/gsdoc/NSRecursiveLock.gsdoc: Update.

2001-04-12  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSString.m: For efficiency, use _DefaultStringEncoding
	throughout, rather than calling +defaultCStringEncoding.  This is
	safe since the documentation explicitly states that the encoding
	cannot be changed programmatically ... so we don't have to worry
	about someone adding a category to change that.
	When converting data to/from strings, optimise to simple cString
	stuff if the specified encoding is the defautl encoding.
	Tidied some stuff to conform better to coding standards.
	* Source/Unicode.m GetDefEncoding(): prohibit UTF8 from being the
	default cString encoding ... the default cString encoding must
	consist of 7 or 8 bit characters, and must contain ASCII as a
	subset.  We really should think of a generalised test for that.
	Use GetDefEncoding() throughout rather than defaultCStringEncoding.
	* Source/GSString.m: Use GetDefEncoding() to get c string encoding.

2001-04-11  Nicola Pero  <nicola@brainstorm.co.uk>
	
	* Source/NSString.m ([-initWithData:encoding:]): When working with
	a generic but non-unicode encoding, do not treat a single
	character string with no null terminator as an empty string.  This
	should fix passing single character strings over DO.
	* Source/NSThread.m ([+registerCurrentThread]),